samples/_failures_safe/1761310753_7e7de1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4f29fd66.c: In function ‘main’:
./samples/SAFE/__tmp_4f29fd66.c:156: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_4f29fd66.c:155:17: error: expected declaration or statement at end of input
  155 |                 if
      |                 ^~
./samples/SAFE/__tmp_4f29fd66.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4f29fd66.c:155:17: error: expected declaration or statement at end of input
